# linux_thermal_zone

./: .gitmodules  README.md  package.xml
linux_thermal_zone/: CMakeLists.txt  README.md
