<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linux_thermal_zone</name>
  <version>0.0.0</version>
  <description>ROS2 metapackage for Linux Thermal Zone(s)</description>
  <maintainer email="nat11public@gmail.com">Nathanael Gandhi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>linux_thermal_zone_base</exec_depend>
  <exec_depend>linux_thermal_zone_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
